app/index.css
html, body {
  height: 100%;
  width: 100%;
  overflow: hidden;
  margin: 0;
  padding: 0;
  font-family: Helvetica, Arial, Sans-Serif;
}

#app {
  height: 100%;
  width: 100%;
}

.container {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  width: 100%;
  overflow: scroll;
}

.input-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 5px;
  background-color: #f4552a;
}

.title {
  color: #fff;
  padding-left: 10px;
}

.home {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-size: cover;
  width: 100%;
  height: 100%;
}

.forecast {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding: 20px;
  width: 100%;
  height: 100%;
}

.weather-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 100%;
}

.weather-preview {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px;
  height: 200px;
}

.details {
  font-size: 1.5em;
  text-align: center;
  padding: 20px;
}

.heading {
  font-size: 50px;
  font-weight: 100;
  color: #fff;
  margin: 10px 0;
}

input {
  padding: 10px;
  border-radius: 5px;
  width: 100%;
  height: 2em;
}

.button {
  color: #e6e6e6;
  background: #00b838;
  border: none;
  font-size: 16px;
  border-radius: 3px;
  width: 120px;
  text-align: center;
  display: inline-block;
  padding: 6px 12px;
  margin: 10px;
  white-space: nowrap;
}

.button:active {
  transform: translateY(1px);
}

